--- a/src/static/styles.css
+++ b/src/static/styles.css
@@ -158,9 +158,27 @@ footer {
 }
 
 .participants-list {
-  list-style-type: disc;
-  padding-left: 22px;
+  list-style-type: none;
+  padding-left: 0;
   margin: 0;
+}
+
+.no-bullets {
+  list-style-type: none;
+  padding-left: 0;
+}
+
+.delete-participant {
+  cursor: pointer;
+  margin-left: 8px;
+  color: #c62828;
+  font-size: 16px;
+  vertical-align: middle;
+  transition: color 0.2s;
+}
+
+.delete-participant:hover {
+  color: #b71c1c;
 }
 
 .participant-email {
